tests/compiler/case_exhaustiveness_null_1.kk.out
error: Unreachable case
 --> tests/compiler/case_exhaustiveness_null_1.kk:1:4
  |
...
3 |   \null => false
  |    ^^^^
  |

This case is unreachable because all possible cases are already handled by previous branches, therefore please remove this branch.

